--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -27,8 +27,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "emailGithubMu@gmail.com"
-          git config --local user.name "usernameGithubMu"
+          git config --local user.email "aziidilman96@gmail.com"
+          git config --local user.name "zeineth"
           git add -A
           
           arr[0]="🟢 auto commit"
